--- a/package.json
+++ b/package.json
@@ -8,11 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tanstack/vue-table": "8.9.3",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "node-sass": "^9.0.0",
+    "pinia": "^2.1.4",
+    "postprocessing": "5.3.1",
+    "pug-plain-loader": "^1.1.0",
+    "sass-loader": "^13.3.2",
+    "three": "^0.141.0",
+    "three.interactive": "^1.7.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@types/three": "^0.152.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -27,6 +37,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
+    "pug": "^3.0.2",
     "typescript": "~4.5.5"
   },
   "eslintConfig": {
@@ -42,7 +53,9 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {}
+    "rules": {
+      "no-console": "off"
+    }
   },
   "browserslist": [
     "> 1%",
