--- a/package.json
+++ b/package.json
@@ -8,21 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/vue-table": "8.9.3",
+    "@types/three": "^0.152.1",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "node-sass": "^9.0.0",
     "pinia": "^2.1.4",
     "postprocessing": "5.3.1",
+    "primevue": "^3.29.2",
     "pug-plain-loader": "^1.1.0",
     "sass-loader": "^13.3.2",
-    "three": "^0.141.0",
+    "three": "^0.154.0",
     "three.interactive": "^1.7.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
-    "@types/three": "^0.152.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
