--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,10 @@
     "types": [
       "webpack-env"
     ],
+		"typeRoots": [
+		"./src/@types",
+		"./node_modules/@types",
+    ],
     "paths": {
       "@/*": [
         "src/*"
@@ -32,6 +36,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
+    "src/declaration.d.ts",
     "tests/**/*.tsx"
   ],
   "exclude": [
