--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/vue-table": "8.9.3",
     "@types/three": "^0.152.1",
+    "@vueuse/core": "^10.2.1",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "node-sass": "^9.0.0",
