--- a/package.json
+++ b/package.json
@@ -16,30 +16,30 @@
     "core-js": "^3.8.3",
     "node-sass": "^9.0.0",
     "pinia": "^2.1.4",
-    "postprocessing": "5.3.1",
+    "postprocessing": "^6.32.2",
     "primevue": "^3.29.2",
     "pug-plain-loader": "^1.1.0",
     "sass-loader": "^13.3.2",
-    "three": "^0.154.0",
+    "three": "^0.152.0",
     "three.interactive": "^1.7.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-standard": "^6.1.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "eslint": "^7.32.0",
+    "@vue/eslint-config-standard": "^8.0.1",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "eslint": "^8.44.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.15.1",
     "pug": "^3.0.2",
     "typescript": "~4.5.5"
   },
