--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^9.0.0",
     "pinia": "^2.1.4",
     "postprocessing": "^6.32.2",
+    "primeflex": "^3.3.1",
     "primevue": "^3.29.2",
     "pug-plain-loader": "^1.1.0",
     "sass-loader": "^13.3.2",
