--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "primeflex": "^3.3.1",
     "primevue": "^3.29.2",
     "pug-plain-loader": "^1.1.0",
-    "quasar": "^2.12.2",
     "sass-loader": "^13.3.2",
     "splitpanes": "^3.1.5",
     "three": "^0.152.0",
@@ -45,8 +44,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.15.1",
     "pug": "^3.0.2",
-    "typescript": "~4.5.5",
-    "vue-cli-plugin-quasar": "~5.0.2"
+    "typescript": "~4.5.5"
   },
   "eslintConfig": {
     "root": true,
