--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "three": "^0.152.0",
     "three.interactive": "^1.7.0",
     "vue": "^3.2.13",
+    "vue-load-image": "^1.1.0",
     "vue-multipane": "^0.9.5",
     "vue-router": "^4.0.3"
   },
