--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue": "^3.2.13",
     "vue-load-image": "^1.1.0",
     "vue-multipane": "^0.9.5",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.60.1",
