--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "strict": true,
     "jsx": "preserve",
     "moduleResolution": "node",
+	"noImplicitAny": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -17,7 +18,7 @@
     ],
 		"typeRoots": [
 		"./src/@types",
-		"./node_modules/@types",
+		"./node_modules/@types"
     ],
     "paths": {
       "@/*": [
