--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-load-image": "^1.1.0",
     "vue-multipane": "^0.9.5",
     "vue-router": "^4.0.3",
+    "vue3-touch-events": "^4.1.3",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
