--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve --port 80",
+    "build": "vue-cli-service build --port 80",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-sdk/s3-request-presigner": "^3.377.0",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/vue-table": "8.9.3",
     "@types/three": "^0.152.1",
@@ -24,7 +25,7 @@
     "splitpanes": "^3.1.5",
     "three": "^0.152.0",
     "three.interactive": "^1.7.0",
-    "vue": "^3.2.13",
+    "vue": "^3.2.26",
     "vue-load-image": "^1.1.0",
     "vue-multipane": "^0.9.5",
     "vue-router": "^4.0.3",
