ios landscape padding, arrow keys on content view

--- a/package.json
+++ b/package.json
@@ -4,28 +4,25 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --port 80",
-    "build": "vue-cli-service build --port 80",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.377.0",
     "@aws-sdk/s3-request-presigner": "^3.377.0",
-    "@tanstack/match-sorter-utils": "^8.8.4",
-    "@tanstack/vue-table": "8.9.3",
     "@types/three": "^0.152.1",
-    "@vueuse/core": "^10.2.1",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "node-sass": "^9.0.0",
     "pinia": "^2.1.4",
-    "postprocessing": "^6.32.2",
-    "primeflex": "^3.3.1",
     "primevue": "^3.29.2",
+    "primeflex": "^3.3.1",
     "pug-plain-loader": "^1.1.0",
     "sass-loader": "^13.3.2",
     "splitpanes": "^3.1.5",
     "three": "^0.152.0",
     "three.interactive": "^1.7.0",
+    "v-lazy-image": "^2.1.1",
     "vue": "^3.2.26",
     "vue-load-image": "^1.1.0",
     "vue-multipane": "^0.9.5",
