--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/three": "^0.152.1",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "draggable-resizable-vue3": "^1.0.94-beta",
+    "eslint-plugin-prettier": "^5.0.0",
     "mkdirp": "^3.0.1",
     "node-sass": "^9.0.0",
     "pinia": "^2.1.4",
@@ -24,6 +26,8 @@
     "three": "^0.152.0",
     "three.interactive": "^1.7.0",
     "v-lazy-image": "^2.1.1",
+    "v-viewer": "^3.0.11",
+    "viewerjs": "^1.11.4",
     "vue": "^3.2.26",
     "vue-load-image": "^1.1.0",
     "vue-multipane": "^0.9.5",
