--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue": "^3.2.26",
     "vue-load-image": "^1.1.0",
     "vue-multipane": "^0.9.5",
+    "vue-resizable": "^2.1.7",
     "vue-router": "^4.0.3",
     "vue3-touch-events": "^4.1.3",
     "vuex": "^4.1.0"
