--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-multipane": "^0.9.5",
     "vue-resizable": "^2.1.7",
     "vue-router": "^4.0.3",
+    "vue-zoomer": "^0.4.0-beta.2",
     "vue3-touch-events": "^4.1.3",
     "vuex": "^4.1.0"
   },
