--- a/package.json
+++ b/package.json
@@ -63,9 +63,7 @@
     "extends": [
       "plugin:vue/vue3-essential",
       "@vue/standard",
-      "@vue/typescript/recommended",
-      "plugin:prettier/recommended",
-      "eslint:recommended"
+      "@vue/typescript/recommended"
     ],
     "parserOptions": {
       "ecmaVersion": 2020
