--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@aws-sdk/client-s3": "^3.377.0",
     "@aws-sdk/s3-request-presigner": "^3.377.0",
     "@types/three": "^0.152.1",
+    "@vueuse/components": "^10.3.0",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "draggable-resizable-vue3": "^1.0.94-beta",
@@ -27,12 +28,15 @@
     "three.interactive": "^1.7.0",
     "v-lazy-image": "^2.1.1",
     "v-viewer": "^3.0.11",
+    "v3-infinite-loading": "^1.3.1",
     "viewerjs": "^1.11.4",
     "vue": "^3.2.26",
     "vue-load-image": "^1.1.0",
+    "vue-masonry": "^0.16.0",
     "vue-multipane": "^0.9.5",
     "vue-resizable": "^2.1.7",
     "vue-router": "^4.0.3",
+    "vue-virtual-scroll-grid": "^1.10.2",
     "vue-zoomer": "^0.4.0-beta.2",
     "vue3-touch-events": "^4.1.3",
     "vuex": "^4.1.0"
