--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
     "check-ts": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@types/three": "^0.152.1",
-    "@vueuse/components": "^10.3.0",
-    "axios": "^1.4.0",
+    "vue": "^3.2.26",
     "core-js": "^3.8.3",
     "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.2",
+    "axios": "^1.4.0",
     "pinia": "^2.1.4",
     "primeflex": "^3.3.1",
     "primevue": "^3.29.2",
-    "sass-loader": "^13.3.2",
     "splitpanes": "^3.1.5",
     "three": "^0.152.0",
     "three.interactive": "^1.7.0",
-    "vue": "^3.2.26",
+    "@types/three": "^0.152.1",
     "vue-load-image": "^1.1.0",
     "vue-resizable": "^2.1.7",
     "vue-router": "^4.0.3",
@@ -32,5 +31,26 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "vue-tsc": "^1.8.8"
-  }
+  },
+    "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "@vue/standard",
+      "@vue/typescript/recommended"
+    ],
+    "parserOptions": {
+      "ecmaVersion": 2024
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ]
 }
