--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,11 @@
     "module": "esnext",
     "strict": true,
     "jsx": "preserve",
+    "importHelpers": true,
     "moduleResolution": "node",
-	"noImplicitAny": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "useDefineForClassFields": true,
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
@@ -34,11 +32,9 @@
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "src/declaration.d.ts",
-    "tests/**/*.tsx"
+    "src/declaration.d.ts"
   ],
   "exclude": [
     "node_modules"
