--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/three": "^0.152.1",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "node-sass": "^9.0.0",
+    "pdfvuer": "^2.0.1",
     "pinia": "^2.1.4",
     "primeflex": "^3.3.1",
     "primevue": "^3.29.2",
@@ -22,6 +24,8 @@
     "three.interactive": "^1.7.0",
     "vue": "^3.2.26",
     "vue-load-image": "^1.1.0",
+    "vue-pdf": "^4.3.0",
+    "vue-pdf-embed": "^1.1.6",
     "vue-resizable": "^2.1.7",
     "vue-router": "^4.0.3",
     "vuex": "^4.1.0"
