--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-pdf-embed": "^1.1.6",
     "vue-resizable": "^2.1.7",
     "vue-router": "^4.0.3",
+    "vue3-pdf-app": "^1.0.3",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
