--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "splitpanes": "^3.1.5",
     "three": "^0.152.0",
     "three.interactive": "^1.7.0",
+    "vanilla-tilt": "^1.8.1",
     "vue": "^3.2.26",
     "vue-load-image": "^1.1.0",
     "vue-pdf": "^4.3.0",
