--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --port 80",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "@tiptap/extension-hard-break": "^2.1.8",
