--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.5",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 443",
+    "serve": "vue-cli-service serve --port 80",
     "build": "vue-cli-service build"
   },
   "dependencies": {
@@ -25,6 +25,7 @@
     "vue": "^3.2.26",
     "vue-force-graph": "^0.1.2",
     "vue-load-image": "^1.1.0",
+    "vue-plugin-load-script": "^1.3.6",
     "vue-resizable": "^2.1.7",
     "vue-router": "^4.0.3",
     "vue3-pdf-app": "^1.0.3"
