--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-plugin-load-script": "^1.3.6",
     "vue-resizable": "^2.1.7",
     "vue-router": "^4.0.3",
+    "vue-slider-component": "^4.1.0-beta.7",
     "vue3-pdf-app": "^1.0.3"
   },
   "devDependencies": {
