--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "vue": "^3.2.26",
     "vue-force-graph": "^0.1.2",
     "vue-load-image": "^1.1.0",
-    "vue-plugin-load-script": "^1.3.6",
     "vue-resizable": "^2.1.7",
     "vue-router": "^4.0.3",
     "vue-slider-component": "^4.1.0-beta.7",
@@ -36,6 +35,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/tsconfig": "^0.4.0",
     "typescript": "^5.2.2",
     "vue-tsc": "^1.8.8"
   },
