--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@tiptap/extension-hard-break": "^2.1.8",
-    "@tiptap/extension-typography": "^2.1.11",
-    "@tiptap/pm": "^2.1.8",
     "@tiptap/starter-kit": "^2.1.8",
     "@tiptap/vue-3": "^2.1.8",
     "@types/three": "^0.152.1",
@@ -19,15 +16,13 @@
     "primevue": "^3.29.2",
     "sass-loader": "^13.3.2",
     "splitpanes": "^3.1.5",
-    "three": "^0.152.0",
-    "three.interactive": "^1.7.0",
-    "vanilla-tilt": "^1.8.1",
+    "uglify-js": "^3.17.4",
     "vue": "^3.2.26",
     "vue-force-graph": "^0.1.2",
     "vue-load-image": "^1.1.0",
     "vue-resizable": "^2.1.7",
     "vue-router": "^4.0.3",
-    "vue-slider-component": "^4.1.0-beta.7",
+    "vue3-click-away": "^1.2.4",
     "vue3-pdf-app": "^1.0.3"
   },
   "devDependencies": {
@@ -37,7 +32,8 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/tsconfig": "^0.4.0",
     "typescript": "^5.2.2",
-    "vue-tsc": "^1.8.8"
+    "vue-tsc": "^1.8.8",
+    "webpack-bundle-analyzer": "^4.10.1"
   },
   "browserslist": [
     "> 1%",
