--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@tiptap/vue-3": "^2.1.8",
     "@types/three": "^0.152.1",
     "axios": "^1.4.0",
+    "overlayscrollbars": "^2.4.6",
+    "overlayscrollbars-vue": "^0.5.6",
     "pinia": "^2.1.4",
     "primeflex": "^3.3.1",
     "primevue": "^3.29.2",
