--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "crystal_hair_vue",
-  "version": "0.1.0",
+  "version": "0.9.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --port 80",
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@auth0/auth0-vue": "^2.3.3",
-    "@tiptap/starter-kit": "^2.1.8",
     "@tiptap/vue-3": "^2.1.8",
-    "@types/three": "^0.152.1",
+    "@tiptap/starter-kit": "^2.1.8",
     "axios": "^1.4.0",
     "overlayscrollbars": "^2.4.6",
     "overlayscrollbars-vue": "^0.5.6",
@@ -19,7 +17,7 @@
     "primevue": "^3.29.2",
     "sass-loader": "^13.3.2",
     "splitpanes": "^3.1.5",
-    "uglify-js": "^3.17.4",
+    "three": "^0.160.1",
     "vue": "^3.2.26",
     "vue-force-graph": "^0.1.2",
     "vue-load-image": "^1.1.0",
@@ -34,9 +32,11 @@
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/tsconfig": "^0.4.0",
+    "@types/three": "^0.152.1",
     "typescript": "^5.2.2",
     "vue-tsc": "^1.8.8",
-    "webpack-bundle-analyzer": "^4.10.1"
+    "webpack-bundle-analyzer": "^4.10.1",
+    "terser-webpack-plugin": "^5.3.10"
   },
   "browserslist": [
     "> 1%",
