--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@tiptap/vue-3": "^2.1.8",
     "@tiptap/starter-kit": "^2.1.8",
+    "@tiptap/vue-3": "^2.1.8",
     "axios": "^1.4.0",
     "overlayscrollbars": "^2.4.6",
     "overlayscrollbars-vue": "^0.5.6",
@@ -24,19 +24,20 @@
     "vue-resizable": "^2.1.7",
     "vue-router": "^4.0.3",
     "vue3-click-away": "^1.2.4",
-    "vue3-pdf-app": "^1.0.3"
+    "vue3-pdf-app": "^1.0.3",
+    "vue3-tree-vue": "^2.0.9"
   },
   "devDependencies": {
     "@types/splitpanes": "^2.2.1",
+    "@types/three": "^0.152.1",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/tsconfig": "^0.4.0",
-    "@types/three": "^0.152.1",
+    "terser-webpack-plugin": "^5.3.10",
     "typescript": "^5.2.2",
     "vue-tsc": "^1.8.8",
-    "webpack-bundle-analyzer": "^4.10.1",
-    "terser-webpack-plugin": "^5.3.10"
+    "webpack-bundle-analyzer": "^4.10.1"
   },
   "browserslist": [
     "> 1%",
