--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 node_modules
 public
 /dist
-
+stats.html*
 
 # local env files
 .env.local
@@ -13,7 +13,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-stats.html
 .editorconfig
 
 # Editor directories and files
