--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-.editorconfig
+.editorconfig*
 
 # Editor directories and files
 .idea
